--- a/res/layout/drawer_list_item.xml
+++ b/res/layout/drawer_list_item.xml
@@ -1,11 +1,18 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textAppearance="@android:style/TextAppearance.Medium"
-    android:gravity="center_vertical"
-    android:padding="3dp"
-    android:drawableLeft="@drawable/ic_launcher"
-    android:drawablePadding="10dp"
-    android:textColor="@color/navigation_drawer_text">
+    android:orientation="vertical"
+    android:id="@+id/drawer_list_layout">
     
-</TextView>
+    <TextView 
+	    android:id="@+id/drawer_list_text"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:textAppearance="@android:style/TextAppearance.Medium"
+	    android:gravity="center_vertical"
+	    android:padding="3dp"
+	    android:drawableLeft="@drawable/ic_launcher"
+	    android:drawablePadding="10dp"
+	    android:textColor="@color/navigation_drawer_text">
+	</TextView>
+</LinearLayout>
