Resolved: Bug #601 - Error scaling in login screen Done: Task #633 - Adapt the menu of shared nodes depending on the access permissions

--- a/res/layout/activity_tour.xml
+++ b/res/layout/activity_tour.xml
@@ -48,6 +48,7 @@
             >
 	       
             <TextView
+                android:id="@+id/tour_text_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
@@ -57,6 +58,7 @@
                 />
             
             <TextView
+                android:id="@+id/tour_text_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
