--- a/res/layout/item_shared_folder.xml
+++ b/res/layout/item_shared_folder.xml
@@ -4,6 +4,14 @@
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
     android:id="@+id/shared_folder_item_layout">
+    
+    <CheckBox
+        android:id="@+id/shared_folder_contact_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:checked="false"
+        android:focusable="false"
+        android:layout_centerVertical="true" />
          
     <com.mega.components.RoundedImageView 
          android:id="@+id/shared_folder_contact_thumbnail"
@@ -14,7 +22,8 @@
          android:paddingTop="3dp"
          rounded:corner_radius="27dp" 
          rounded:border_width="2dp"
-         rounded:border_color="@color/border_file_properties"/>
+         rounded:border_color="@color/border_file_properties"
+         android:layout_toRightOf="@id/shared_folder_contact_checkbox"/>
     
     <TextView
         android:id="@+id/shared_folder_contact_name"
