Solved: bug #783 - Shake in the grid view when showing the adapters

--- a/res/layout/item_contact_grid.xml
+++ b/res/layout/item_contact_grid.xml
@@ -137,24 +137,15 @@
 		            android:layout_gravity="center_vertical" />
 	        </TableRow>        
         </TableLayout>
-    </RelativeLayout>
-    
-    <View
-	    android:id="@+id/contact_grid_separator_final"
-		android:layout_width="5dp"
-		android:layout_height="0dp"
-		android:background="@null"
-        android:layout_alignParentRight="true" />
-    
+    </RelativeLayout>           
+                 
     <RelativeLayout 
-        android:layout_width="172dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/contact_grid_item_layout2"
         android:layout_toRightOf="@id/contact_grid_item_layout2"
-        android:layout_toLeftOf="@id/contact_grid_separator_final"
         android:background="@drawable/background_item_grid"
-        android:layout_marginTop="5dp"
-        android:descendantFocusability="blocksDescendants" >
+        android:layout_alignParentRight="true">
         
         <com.mega.components.RoundedImageView 
 		    android:id="@+id/contact_grid_thumbnail2"
