--- a/res/layout/item_file_grid.xml
+++ b/res/layout/item_file_grid.xml
@@ -42,6 +42,8 @@
 	        android:paddingTop="3dp"
 	        android:layout_below="@id/file_grid_separator1" />
         
+              
+        
         <TextView
 	        android:id="@+id/file_grid_filesize1"
 	        android:layout_width="wrap_content"
@@ -64,7 +66,18 @@
 	        android:paddingBottom="8dp"
 	        android:layout_gravity="right"
 	        android:layout_alignParentRight="true" 
-	        android:layout_alignParentBottom="true"/>
+	        android:layout_alignParentBottom="true"/>        
+        
+       <ProgressBar
+	    android:id="@+id/transfers_list__browser_bar1"
+		android:layout_width="fill_parent"
+		android:layout_height="30dp" 
+		android:paddingRight="10dp"
+		android:paddingBottom="10dp"
+		style="@style/MEGAProgressBarTransfers"  
+		android:layout_margin="5dip" 
+        android:layout_toLeftOf="@id/file_grid_three_dots1"
+        android:layout_below="@id/file_grid_filename1" /> 
         
         <ImageView
 	        android:id="@+id/file_grid_arrow_selection1"
@@ -227,6 +240,19 @@
 	        android:layout_alignParentRight="true" 
 	        android:layout_alignParentBottom="true"/>
         
+        
+       <ProgressBar
+	    android:id="@+id/transfers_list__browser_bar2"
+		android:layout_width="fill_parent"
+		style="@style/MEGAProgressBarTransfers"  
+		android:layout_margin="5dip" 
+		android:layout_height="30dp" 
+		android:paddingRight="10dp"
+		android:paddingBottom="10dp"
+        android:layout_toRightOf="@id/file_grid_thumbnail2"
+        android:layout_toLeftOf="@id/file_grid_three_dots2"
+        android:layout_below="@id/file_grid_filename2" /> 
+
         <ImageView
 	        android:id="@+id/file_grid_arrow_selection2"
 	        android:layout_width="wrap_content"
