--- a/res/layout/item_contact_list.xml
+++ b/res/layout/item_contact_list.xml
@@ -50,7 +50,7 @@
 		android:background="@null" 
         android:layout_alignTop="@id/contact_list_name"
         android:layout_alignParentRight="true"
-		android:paddingTop="25dp"
+		android:paddingTop="12dp"
         android:paddingLeft="5dp"
         android:paddingRight="15dp" />
      <!--
@@ -67,9 +67,9 @@
         android:id="@+id/contact_list_options"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/contact_list_three_dots"
+        android:layout_below="@id/contact_list_content"
         android:padding="0dp"
-        android:background="#222222">
+        android:background="#2a2a2a">
         
         <TableLayout
             android:layout_width="fill_parent"
