--- a/res/layout/item_offline_list.xml
+++ b/res/layout/item_offline_list.xml
@@ -48,7 +48,7 @@
 		android:background="@null" 
         android:layout_alignTop="@id/offline_list_filename"
         android:layout_alignParentRight="true"
-		android:paddingTop="25dp"
+		android:paddingTop="12dp"
         android:paddingRight="15dp" />
      <!--
     <ImageView
@@ -64,9 +64,9 @@
         android:id="@+id/offline_list_options"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/offline_list_three_dots"
+        android:layout_below="@id/offline_list_filesize"
         android:padding="0dp"
-        android:background="#222222">
+        android:background="#2a2a2a">
         
         <TableLayout
             android:layout_width="fill_parent"
