--- a/res/layout/item_shared_folder.xml
+++ b/res/layout/item_shared_folder.xml
@@ -52,7 +52,7 @@
 		android:background="@null" 
         android:layout_alignTop="@id/shared_folder_contact_name"
         android:layout_alignParentRight="true"
-		android:paddingTop="25dp"
+		android:paddingTop="12dp"
         android:paddingLeft="5dp"
         android:paddingRight="15dp" />
     <!--  
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/shared_folder_contact_three_dots"
         android:padding="0dp"
-        android:background="#222222">
+        android:background="#2a2a2a">
         
         <TableLayout
             android:layout_width="fill_parent"
