--- a/res/layout/item_transfers_list.xml
+++ b/res/layout/item_transfers_list.xml
@@ -115,7 +115,7 @@
 		android:background="@null" 
         android:layout_alignTop="@id/transfers_list_filename"
         android:layout_alignParentRight="true"
-		android:paddingTop="25dp"
+		android:paddingTop="12dp"
         android:paddingRight="15dp" />
     <!-- 
     <ImageView
@@ -133,7 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/transfers_list_three_dots"
         android:padding="0dp"
-        android:background="#222222">
+        android:background="#2a2a2a">
         
         <TableLayout
             android:layout_width="fill_parent"
