--- a/res/layout/item_rubbishbin_list.xml
+++ b/res/layout/item_rubbishbin_list.xml
@@ -84,6 +84,7 @@
             android:layout_height="wrap_content">
             
             <TableRow>
+                <!-- 
 	            <ImageButton
 		            android:id="@+id/rubbishbin_list_option_undo"
 		            android:layout_width="wrap_content"
@@ -102,7 +103,7 @@
 		            android:paddingLeft="30dp"
 		            android:paddingTop="10dp"
 		            android:background="@null" 
-		            android:layout_gravity="center_vertical"/>
+		            android:layout_gravity="center_vertical"/> -->
 	        </TableRow>        
         </TableLayout>
     </RelativeLayout>
