--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -27,7 +27,9 @@
         android:layout_toRightOf="@id/file_list_thumbnail"
         android:paddingLeft="3dp"
         android:paddingTop="7dp"
-        android:singleLine="false" />
+        android:ellipsize="end"
+        android:maxLines="1"
+        />
     
     <TextView
         android:id="@+id/file_list_filesize"
@@ -38,7 +40,9 @@
         android:paddingLeft="3dp"
         android:paddingBottom="7dp"
         android:textColor="@color/file_list_second_row" 
-        android:textSize="12sp"/>
+        android:textSize="12sp"
+        android:ellipsize="end"
+        android:maxLines="1"/>
     
     <ImageButton 
         android:id="@+id/file_list_three_dots"
