Feature #1030 (Step1) - Revamping of the Share system (ability to see and manage incoming shares)
TODO: ability to see and manage outgoing shares

--- a/res/menu/activity_contact_file_list.xml
+++ b/res/menu/activity_contact_file_list.xml
@@ -20,8 +20,8 @@
 	<item
 	    android:id="@+id/action_contact_file_list_upload"
 	    android:orderInCategory="110"
-	    android:showAsAction="always"
-	    android:title="More options"
+	    android:showAsAction="never"
+	    android:title="@string/action_add"	    
 	    android:icon="@drawable/ic_menu_upload_here_dark"
-	    MEGA:showAsAction="ifRoom" />
+	    MEGA:showAsAction="never" />
 </menu>
