--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -18,7 +18,8 @@
         android:layout_height="60dp"
         android:layout_marginLeft="5dp" 
         android:scaleType="fitCenter"
-        android:layout_toRightOf="@id/file_list_checkbox" />
+        android:layout_toRightOf="@id/file_list_checkbox" />    
+    
     
     <TextView
         android:id="@+id/file_list_filename"
@@ -27,8 +28,8 @@
         android:layout_toRightOf="@id/file_list_thumbnail"
         android:paddingLeft="3dp"
         android:paddingTop="7dp"
-        android:ellipsize="end"
-        android:maxLines="1"
+        android:ellipsize="middle"
+        android:maxLines="2"
         />
     
     <TextView
@@ -43,6 +44,18 @@
         android:textSize="12sp"
         android:ellipsize="end"
         android:maxLines="1"/>
+<!--    
+        <TextView
+        android:id="@+id/file_list_owner"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_toRightOf="@id/file_list_filename"
+        android:paddingLeft="5dp"
+        android:paddingBottom="7dp"
+        android:textColor="@color/file_list_second_row" 
+        android:textSize="12sp"
+        android:ellipsize="end"
+        android:maxLines="1"/> --> 
     
     <ImageButton 
         android:id="@+id/file_list_three_dots"
