--- a/res/menu/activity_folder_contact_list.xml
+++ b/res/menu/activity_folder_contact_list.xml
@@ -4,8 +4,8 @@
 	<item
 	    android:id="@+id/action_folder_contacts_list_share_folder"
 	    android:orderInCategory="110"
-	    android:showAsAction="always"
+	    android:showAsAction="never"
 		android:title="@string/context_share_folder"
-	    android:icon="@drawable/ic_share"
-	    MEGA:showAsAction="always" />
+	    android:icon="@drawable/ic_action_bar_null"
+	    MEGA:showAsAction="never" />
 </menu>
