--- a/res/layout/item_photo_sync_list.xml
+++ b/res/layout/item_photo_sync_list.xml
@@ -7,6 +7,9 @@
 	<RelativeLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
+	    android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
 	    android:descendantFocusability="blocksDescendants"
 	    android:id="@+id/photo_sync_list_item_layout" >
 	    
@@ -155,7 +158,10 @@
 	    android:layout_height="wrap_content"
 	    android:descendantFocusability="blocksDescendants"
 	    android:id="@+id/photo_sync_list_month_layout" 
-	    android:background="@color/photo_sync_month_layout" >
+	    android:background="@color/photo_sync_month_layout"
+	    android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp" >
 	    
     	<TextView
 	        android:id="@+id/photo_sync_list_month_name"
