--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -28,7 +28,7 @@
         android:layout_toRightOf="@id/file_list_thumbnail"
         android:paddingLeft="3dp"
         android:paddingTop="7dp"
-        android:ellipsize="middle"
+        android:ellipsize="end"
         android:maxLines="2"
         />
     
